[gd_scene load_steps=13 format=3 uid="uid://b3o2mxr07ak2c"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_55741"]
[ext_resource type="Texture2D" uid="uid://ba1d17eracmxq" path="res://assets/brackeys_platformer_assets/sprites/slime_green.png" id="1_pwswm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cqtyr"]
atlas = ExtResource("1_pwswm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6i1k"]
atlas = ExtResource("1_pwswm")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oivsk"]
atlas = ExtResource("1_pwswm")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2fw2"]
atlas = ExtResource("1_pwswm")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_nw0hj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqtyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6i1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oivsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2fw2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vpwnt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jwc7c"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0mhs1"]
resource_name = "fade_in_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u20hn"]
_data = {
"RESET": SubResource("Animation_vpwnt"),
"fade_in": SubResource("Animation_jwc7c"),
"fade_in_2": SubResource("Animation_0mhs1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2awl2"]
size = Vector2(10, 10)

[node name="Slime" type="Area2D"]
collision_mask = 2
script = ExtResource("1_55741")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_nw0hj")
autoplay = "default"
frame_progress = 0.0315994

[node name="RayCastDir" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(8, 0)

[node name="RayCastEsq" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-8, 0)

[node name="RayCastCima" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -5)
target_position = Vector2(0, -11)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u20hn")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
self_modulate = Color(1, 1, 1, 0)
z_index = 6
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -119.0
offset_top = -40.0
offset_right = 602.0
offset_bottom = -309.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_2awl2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
